# rag-sparql

./: .env.example  .gitlab-ci.yml  README.md  next.config.js  package-lock.json  package.json
scripts/: load-vector.py  movie_schema.json  prompt_data.jsonl  pyproject.toml  x_movie_schema.json
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/api/auth/: route.ts
src/app/api/chat/: route.ts
src/app/components/: GraphAnimation.tsx  Header.tsx  InstructionModal.tsx
src/app/components/Chat/: Messages.tsx  index.tsx
src/app/components/Context/: Card.tsx  UrlButton.tsx  index.tsx  urls.ts  utils.ts
src/app/components/Query/: index.tsx
src/app/utils/: context.ts  discord.ts  genSparql.ts  queries.ts
tests/: example.spec.ts
